2007-12-18  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/libgail-util/*:
	* gail-uninstalled.pc.in:
	* gail.pc.in:
	* modules/Makefile.am:
	* modules/other/Makefile.am:
	* modules/other/gail/*:
	* modules/other/gail/libgail-util/*:
	* po/POTFILES.skip: Integrate gail into gtk+. Bug #169488.

2007-12-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksettings.c: Add a gtk-im-module GTK setting
	* gdk/win32/gdkproperty-win32.c: 
	* gdk/x11/gdksettings.c: ...and back it by a Gtk/IMModule X setting.

	* gtk/gtkimmodule.[hc]: 
	* gtk/gtkimmulticontext.[hc]: When determining the default context,
	look at the gtk-im-module setting, and listen for changes to the
	setting.  (#502446, Akira Tagoh)

2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktooltip.c (gtk_tooltip_finalize),
	(gtk_tooltip_set_last_window): use a weak pointer to set last_window
	to NULL as soon as it's destroyed.  (#496546, patch from
	Benjamin Berg).

2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_update_button):
	always determine what arrow to show if show_sort_indicator is true.
	(#352738, Chris Vine).

2007-12-16  Mathias Hasselmann  <mathias@openismus.com>

	Prevent assertion failure in gtk_paned_find_neighbours. (#503824,
	Sébastien Granjoux)

	* gtk/gtkpaned.c: Call gtk_container_forall instead of
	gtk_container_foreach in get_child_panes.

2007-12-15  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_layout_reorder):

	Plug leak: When reordering the info in the list the old node is
	removed but not freed. (#503569)

2007-12-15  Sebastian Dröge  <slomo@circular-chaos.org>

	* gdk/directfb/gdkcursor-directfb.c: (gdk_cursor_new_for_display):
	Use u32 instead of __u32 and u8 instead of __u8 as the other types
	are deprecated since DirectFB 1.0.0. If compiling with an older